Implemented layout files

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,6 +6,7 @@
 
     "paths": {
       "@core/*": ["app/core/*"],
+      "@layouts/*": ["app/layouts/*"],
       "@modules/*": ["app/modules/*"],
       "@services/*": ["app/services/*"]
     },
