--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -60,6 +60,14 @@
 									"maximumError": "5mb"
 								}
 							]
+						},
+						"dev": {
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.dev.ts"
+								}
+							]
 						}
 					}
 				},
@@ -71,6 +79,9 @@
 					"configurations": {
 						"production": {
 							"browserTarget": "frontend:build:production"
+						},
+						"dev": {
+							"browserTarget": "frontend:build:dev"
 						}
 					}
 				},
